Day-13/votinggateway.yaml
# kubectl create secret tls my-tls-secret --key="tls.key" --cert="tls.crt" -n istio-system
# kubectl create secret tls my-tls-secret --key="tls.key" --cert="tls.crt" -n default
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vote
spec:
  hosts:
  - "vote.cloudvishwakarma.in"
  - "www.cloudvishwakarma.in"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote
        port:
          number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: result
spec:
  hosts:
  - "result.cloudvishwakarma.in"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: result
        port:
          number: 80
